<?xml version="1.0"?>
<package format="3">
  <name>rtimulib_ros</name>
  <version>1.2.0</version>
  <description>A simple package to use the nice RTIMULib from RichardsTech in ROS</description>

  <author email="rom.reignier@gmail.com">Romain REIGNIER</author>
  <maintainer email="rom.reignier@gmail.com">Romain REIGNIER</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
